gcc/testsuite/rust/rustc/ui/rfcs/rfc-2627-raw-dylib/link-ordinal-and-name_dg.rs
#[link(name="foo")]
extern "C" {
    #[link_name="foo"]
    #[link_ordinal(42)]
// { dg-error "" "" { target *-*-* } .-1 }
    fn foo();
    #[link_name="foo"]
    #[link_ordinal(5)]
// { dg-error "" "" { target *-*-* } .-1 }
    static mut imported_variable: i32;
}

fn main() {}

